force-app/main/default/objects/SportTraining__c/SportTraining__c.object-meta.xml
<CustomObject>
    <label>Sport Training</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Training Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sport Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>