force-app/main/default/objects/SportTraining__c/fields/Coach__c.field-meta.xml
<CustomField>
    <fullName>Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coach</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sport Trainings (Coach)</relationshipLabel>
    <relationshipName>Sport_Trainings_Coach</relationshipName>
    <type>Lookup</type>
</CustomField>