force-app/main/default/objects/SportTraining__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taktyczny</fullName>
            </value>
            <value>
                <fullName>Kondycyjny</fullName>
            </value>
            <value>
                <fullName>Techniczny</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>